# PythonTools

./: .gitignore  .project  CMakeLists.txt  README.md  References.txt
src/: SKlearn_SVM
src/SVM/: SKlearn_SVM.py
src/Test1/: CMakeLists.txt  hello.py  test1.py
src/bug_localization/: data_help.py  train.py
src/bug_localization/net-work/: bug_code_cnn.py  code_cnn_rnn.py  merge_cnn_cnn.py
src/bug_localization/simiple_train/: simple_eval.py  simple_train.py  simple_training_config.json
src/html_scrapyer/: 6655.py  apacheBug.py  eclipseBug.py  guiyang.py  haha.py  lexuecuirenwu.py  lexuegongzi.py  requirements.txt
src/keras/: keras_nn.py
src/log-output/: Analize.py  Log.py  __init__.py
src/tensorflow/: fully_connected_feed.py  mnist_deep.py  mnist_with_summaries.py
src/text_classification/CNN_sentence/: README.md  data_helpers.py  eval.py  text_cnn.py  train.py  training_config
src/text_classification/PairCNN-Ranking/: Ranking.py  train.py  training_config
src/text_classification/multi-class-text-classification-cnn-rnn/: README.md  data_helper.py  predict.py  text_cnn_rnn.py  train.py  training_config
src/webfiles_downloader/: test1.py
src/word2vec/: find_the_similarity_between.py  find_the_top10_similars.py  jieba_seg.py  langconv.py  process_wiki_data.py  read_file.py  train_word2vec_model.py
